feat: especiality documentation
